# filed-chatgpt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  example_chat_file.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-build.yaml  python-build.yml  release.yaml
filed_chatgpt/: __init__.py  _version.py  dialog_turns.py  filed_chatgpt.py  filed_chatgpt_main.py  message.py
tests/: __init__.py  test_dialog_turns.py  test_filed_chatgpt.py
