[tool.poetry]
name = 'filed-chatgpt'
description = 'Command-line interface to ChatGPT that saves chats in a file'
authors = [
  'Sualeh Fatehi <sualeh@hotmail.com>',
  'James Gatter'
]
version = '0.0.1'
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.6.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
